# VrchatUID

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
VrChatUID/: __init__.py  version.py
VrChatUID/utils/: __init__.py  session_state.py
VrChatUID/utils/api/: __init__.py  _helpers.py  client.py  economy.py  favorites.py  friend.py  groups.py  notifications.py  users.py  world.py
VrChatUID/utils/database/: __init__.py  credentials.py  models.py
VrChatUID/utils/render/: __init__.py  html_render.py
VrChatUID/utils/render/styles/: common.css
VrChatUID/utils/render/templates/: favorite_list.html  friend_list.html  group_info.html  notification.html  user_search.html  world_search.html
VrChatUID/vrc_config/: __init__.py  config_default.py
VrChatUID/vrc_economy/: __init__.py
VrChatUID/vrc_favorite/: __init__.py
VrChatUID/vrc_groups/: __init__.py
VrChatUID/vrc_help/: __init__.py  help.json
VrChatUID/vrc_info/: __init__.py
VrChatUID/vrc_notifications/: __init__.py
VrChatUID/vrc_search/: __init__.py
VrChatUID/vrc_user/: __init__.py
