[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pdm]
distribution = false

[tool.poetry]
name = "VrChatUID"
version = "0.1.0"
description = "基于gsuid-core的VRChat查询Bot插件"
authors = ["VrChatUID"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "VrChatUID" }]
exclude = ["tests", "deploy"]

[tool.poetry.dependencies]
python = "^3.8.1"
vrchatapi = "*"

[tool.basedpyright]
deprecateTypingAliases = false

[project]
name = "VrChatUID"
version = "0.1.0"
description = "基于gsuid-core的VRChat查询Bot插件"
dependencies = ["vrchatapi>=1.0.0"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
