[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["__pycache__", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "N999"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pdm]
distribution = false

[tool.poetry]
name = "VrChatUID"
version = "0.1.0"
description = "基于gsuid-core的VRChat查询Bot插件"
authors = ["VrChatUID"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "VrChatUID" }]
exclude = ["tests", "deploy"]

[tool.poetry.dependencies]
python = "^3.12"
vrchatapi = ">=1.20.7"

[tool.basedpyright]
deprecateTypingAliases = false
pythonVersion = "3.12"

[project]
name = "VrChatUID"
version = "0.1.0"
description = "基于gsuid-core的VRChat查询Bot插件"
dependencies = ["vrchatapi>=1.0.0"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
